--- a/寄存器组.md
+++ b/寄存器组.md
@@ -1,23 +1,26 @@
-# R0-R15的寄存器组
+
+# Cortex-m3 权威指南笔记
 
 
-## R0-R12： 通用寄存器（32bit）
+## R0-R15的寄存器组
+
+### R0-R12： 通用寄存器（32bit）
 - 16位的Thumb指令只能访问R0-R7
 - 32位的Thumb-2指令可以访问所有的寄存器
   
-<font color=red size=4>复位后初始化值不可预料</font>
+<font color=red size=4>注：复位后初始化值不可预料</font>
 
-## R13：堆栈指针SP
+### R13：堆栈指针SP
 Cortex-M3 拥有两个堆栈指针，然而它们是 banked，因此任一时刻只能使用其中的一个。 
 - 主堆栈指针（MSP）：复位后缺省使用的堆栈指针，用于操作系统内核以及异常处理例程（包 括中断服务例程） 
 - 进程堆栈指针（PSP）：由用户的应用程序代码使用。
 
-## R14：连接寄存器
+### R14：连接寄存器
 
-## R15：程序计数器
+### R15：程序计数器
 指向当前的程序地址。如果修改它的值，就能改变程序的执行流
 
-## 特殊功能寄存器
+### 特殊功能寄存器
 Cortex-M3 还在内核水平上搭载了若干特殊功能寄存器，包括
 - 程序状态字寄存器组（PSRs）
 - 中断屏蔽寄存器组（PRIMASK, FAULTMASK, BASEPRI）
@@ -46,10 +49,63 @@ BASEPRI|这个寄存器最多有 9 位（由表达优先级的位数决定）。
 位|功能
 |:--|:--
 |CONTROL[1]|堆栈指针选择
-|^|0=选择主堆栈指针 MSP（复位后的缺省值）
-|^|1=选择进程堆栈指针 PSP
-|^|在线程或基础级（没有在响应异常——译注），可以使用 PSP。在 handler 模式下，只允许使用 MSP，所以此时不得往该位写 1。
+| |0=选择主堆栈指针 MSP（复位后的缺省值）
+| |1=选择进程堆栈指针 PSP
+| |在线程或基础级（没有在响应异常——译注），可以使用 PSP。在 handler 模式下，只允许使用 MSP，所以此时不得往该位写 1。
 |CONTROL[0]|0=特权级的线程模式
-|^|1=用户级的线程模式
-|^|Handler 模式永远都是特权级的。
+| |1=用户级的线程模式
+| |Handler 模式永远都是特权级的。
 
+## 异常
+ All exceptions are handled in Handler mode. Processor state is automatically stored to the stack on an exception, and automatically restored from the stack at the end of the Interrupt Service Routine (ISR)
+ 所有能打断正常执行流的事件都称为异常。
+
+ <font size=5>异常与中断的区别</font>
+ 中断与异常的区别在于，那 240 个中断对 CM3 核来说都是“意外突发事件”——也就是说，
+该请求信号来自 CM3 内核的外面，来自各种片上外设和外扩的外设，对 CM3 来说是“异步”的；而异常则是因 CM3
+内核的活动产生的 在执行指令或访问存储器时产生，因此对 CM3 来说是“同步”的。
+
+### 异常类型
+编号 |类型 |优先级 |简介
+:--|:--|:--|:--
+0 |N/A |N/A |没有异常在运行
+1 |复位 |-3（最高） |复位
+2 |NMI |-2 |不可屏蔽中断（来自外部 NMI 输入脚）
+3 |硬(hard)fault |-1 |所有被除能的 fault，都将“上访”(escalation)成硬 fault。只要FAULTMASK 没有置位，硬 fault 服务例程就被强制执行。Fault被除能的原因包括被禁用，或者被 PRIMASK/BASEPRI 被掩蔽。若 FAULTMASK 也置位，则硬 fault 也被除能，此时彻底“关中”
+4 |MemManage |可编程 |存储器管理 fault，MPU 访问违例以及访问非法位置均可引发。fault 企图在“非执行区”取指也会引发此 fault
+5 |总线 |fault 可编程 |从总线系统收到了错误响应，原因可以是预取流产（Abort）或数据流产，企图访问协处理器也会引发此 fault
+6 |用法(usage) |可编程 |由于程序错误导致的异常。通常是使用了一条无效指令，或者是Fault 非法的状态转换，例如尝试切换到 ARM 状态
+7-10 |保留 |N/A |N/A
+11 |SVCall |可编程 |执行系统服务调用指令（SVC）引发的异常
+12 |调试监视器 |可编程 |调试监视器（断点，数据观察点，或者是外部调试请求）
+13 |保留 |N/A |N/A
+14 |PendSV |可编程 |为系统设备而设的“可悬挂请求”（pendable request）
+15 |SysTick |可编程 |系统滴答定时器（也就是周期性溢出的时基定时器——译注）
+
+外部中断清单
+编号 |类型 |优先级 |简介
+:--|:--|:--|:--
+16 |IRQ #0 |可编程 |外中断#0
+17 |IRQ #1 |可编程 |外中断#1
+… |… |… |…
+255 |IRQ #239 |可编程 |外中断#239
+
+### 优先级的定义
+
+优先级|异常类型|3 个位表达|5 个位表达|8 个位表达
+:--|:--|:--|:--|:--
+-3（最高）|复位|-3|-3|-3 
+-2|NMI|-2|-2|-2 
+-1|硬|fault|-1|-1|-1
+0,|所有其它优|0x00,|0x00|0x00,0x01
+1,|先级可编程|0x20|0x08|0x02,0x03
+…|的异常|…|…|…
+0xFF| |0xE0|0xF8|0xFE,0xFF
+
+### 向量表
+
+### 中断输入以及悬起行为
+
+### fault异常
+
+### SVC和PendSV
